@@ -1,5 +1,12 @@
 2007-01-27  Andreas Røsdal  <andreasr@gnome.org>
 
+	* ai.py:
+	* gtkui/gtkui.py:
+	* game.py: Add notifications on the statusbar of check and checkmate.
+	Note that this adds two new translatable strings.
+
+2007-01-27  Andreas Røsdal  <andreasr@gnome.org>
+
 	* src/lib/defaults.py.in: Resolve Bug #393882: strings not translated. 
 	This is done by specifying the locale directory specifically.
 
